--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,18 +10,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t cygnetops/react-test -f ./client/Dockerfile.dev ./client
-      - run: docker run -e CI=true cygnetops/react-test npm test
+      - run: docker build -t cvetannikolov/react-test -f ./client/Dockerfile.dev ./client
+      - run: docker run -e CI=true cvetannikolov/react-test npm test
 
-      - run: docker build -t cygnetops/multi-client-10-14 ./client
-      - run: docker build -t cygnetops/multi-nginx-10-14 ./nginx
-      - run: docker build -t cygnetops/multi-server-10-14 ./server
-      - run: docker build -t cygnetops/multi-worker-10-14 ./worker
+      - run: docker build -t cvetannikolov/multi-client-10-14 ./client
+      - run: docker build -t cvetannikolov/multi-nginx-10-14 ./nginx
+      - run: docker build -t cvetannikolov/multi-server-10-14 ./server
+      - run: docker build -t cvetannikolov/multi-worker-10-14 ./worker
 
-      - run: docker push cygnetops/multi-client-10-14
-      - run: docker push cygnetops/multi-nginx-10-14
-      - run: docker push cygnetops/multi-server-10-14
-      - run: docker push cygnetops/multi-worker-10-14
+      - run: docker push cvetannikolov/multi-client-10-14
+      - run: docker push cvetannikolov/multi-nginx-10-14
+      - run: docker push cvetannikolov/multi-server-10-14
+      - run: docker push cvetannikolov/multi-worker-10-14
 
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
